--- a/client/src/sass/_container.scss
+++ b/client/src/sass/_container.scss
@@ -25,11 +25,13 @@
 }
 
 .about-container {
+  padding: 4em;
+  min-height: auto;
   .col:first-child {
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
-    border: 1px solid red;
+    min-height: 600px;
   }
   .col:nth-child(2) {
     position: absolute;
@@ -55,9 +57,13 @@
     color: black;
   }
   .row-inner {
+    display: flex;
     flex-flow: row wrap;
     .col {
-      width: 40%;
+      width: 45%;
+      min-width: 300px;
+      min-height: auto;
+      height: auto !important;
       li {
         text-align: left;
         text-transform: capitalize;
@@ -107,14 +113,54 @@
   input[name="phoneNumber"] {
     display: inline-block;
     min-width: 150px;
-    max-width: 300px;
+    max-width: 285px;
     margin: 0.5em;
   }
-  input[name="subject"] {
+  input[name="subject"],
+  input[name="message"] {
     min-width: 150px;
   }
   input[name="message"] {
-    min-width: 150px;
     max-height: 200px;
+  }
+}
+
+.meet-the-team-container {
+  background-color: black;
+  padding: 0;
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  h2 {
+    position: absolute;
+    top: 190px;
+    right: 290px;
+    z-index: 1;
+  }
+  .row {
+    display: inline-flex;
+    flex-flow: row wrap;
+    max-height: 600px;
+    .inner-col {
+      padding: 2em;
+      color: white;
+      text-align: center;
+      overflow: hidden;
+      img {
+        border-radius: 50%;
+      }
+    }
+    .inner-col:nth-of-type(2) {
+      background-color: white;
+      color: black;
+      text-align: left;
+      p {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+    }
   }
 }
