--- a/client/src/sass/_container.scss
+++ b/client/src/sass/_container.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
+    align-content: center;
     .col {
       height: 100%;
     }
@@ -109,6 +110,7 @@
     }
     .inner-col:nth-of-type(2) {
       background-color: white;
+      height: 100vh;
       color: black;
       text-align: left;
       p {
