--- a/client/src/sass/_footer.scss
+++ b/client/src/sass/_footer.scss
@@ -1,30 +1,35 @@
-.footer {
-    height: auto !important;
-  background-color: black;
-  .row {
-    height: auto !important;
-    text-align: center;
-    min-width: 100%;
-    div {
-      img {
-        margin: 0.5em;
-        width: 20px;
-        min-width: auto;
+.App {
+
+    .footer {
+      height: 600px;
+      position: absolute;
+      bottom: 0;
+      background-color: black;
+      .row {
         height: auto !important;
+        text-align: center;
+        min-width: 100%;
+        div {
+          img {
+            margin: 0.5em;
+            width: 20px;
+            min-width: auto;
+            height: auto !important;
+          }
+          h5 {
+            text-align: left;
+          }
+          text-align: left;
+          margin: 1em;
+          width: 300px;
+          display: inline-block;
+        }
       }
-      h5 {
-        text-align: left;
-      }
-      text-align: left;
-      margin: 1em;
-      width: 300px;
-      display: inline-block;
-    }
-  }
-  .row:nth-of-type(2) {
-      div {
+      .row:nth-of-type(2) {
+        div {
           margin: 0 auto;
           text-align: center;
+        }
       }
-  }
+    }
 }
