commit before fixing branches

--- a/client/src/sass/_footer.scss
+++ b/client/src/sass/_footer.scss
@@ -20,7 +20,7 @@
             text-align: left;
           }
           text-align: left;
-          margin: 1em;
+          margin: 1em 4em;
           width: 300px;
           display: inline-block;
         }
