--- a/client/src/sass/_container.scss
+++ b/client/src/sass/_container.scss
@@ -66,6 +66,7 @@
       min-height: auto;
       height: auto !important;
       li {
+        list-style-type: none;
         text-align: left;
         text-transform: capitalize;
         font-size: 20px;
@@ -86,26 +87,37 @@
   padding: 0;
   position: relative;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   h2 {
     position: absolute;
-    top: 190px;
-    right: 290px;
+    top: 25%;
+    right: 20%;
     z-index: 1;
   }
   .row {
     display: inline-flex;
-    flex-flow: row wrap;
-    max-height: 600px;
+    flex-flow: column wrap;
+    height: 100vh;
+    overflow: hidden;
+    width: 100vw;
+    padding: 0;
+    border: 2px solid yellow;
     .inner-col {
+      border: 3px solid blue;
       padding: 2em;
       color: white;
       text-align: center;
       overflow: hidden;
+      width: 100%;
+      height: 100%;
+      position: relative;
       img {
-        border-radius: 50%;
+        width: 50%;
+        border: 1px solid red;
+        position: absolute;
+        top: 50%;
+        left: 75%;
+        transform: translate(-50%, -50%);
+        z-index: -1;
       }
     }
     .inner-col:nth-of-type(2) {
@@ -113,6 +125,7 @@
       height: 100vh;
       color: black;
       text-align: left;
+      width: 100%;
       p {
         position: absolute;
         top: 50%;
