committing services-icon change

--- a/client/src/sass/_form.scss
+++ b/client/src/sass/_form.scss
@@ -39,8 +39,8 @@
   input[name="email"],
   input[name="phoneNumber"] {
     display: inline-block;
-    min-width: 150px;
-    max-width: 285px;
+    min-width: 39%;
+    max-width: 39%;
     margin: 0.5em;
   }
   input[name="subject"],
