--- a/client/src/sass/App.scss
+++ b/client/src/sass/App.scss
@@ -7,33 +7,34 @@
 
 body {
   min-height: 100vh; /* will cover the 100% of viewport */
- display: block;
- position: relative;
-  padding-bottom: 600px;
+  display: block;
+  position: relative;
+  padding-bottom: 300px;
   h1 {
     font-size: 8vmax;
     font-weight: 800;
   }
 
-  h4, h5 {
+  h4,
+  h5 {
     text-align: center;
     color: white;
   }
-  
+
   h4 {
     font-weight: bold;
   }
-  
+
   h5 {
     padding-bottom: 1em;
-    font-weight: 300; 
+    font-weight: 300;
     font-style: italic;
   }
 
   h6 {
     font-weight: 300;
   }
-  
+
   h2 {
     font-size: 4vw;
     font-weight: bolder;
@@ -44,6 +45,21 @@ body {
   img {
     width: 100%;
     min-width: 100%;
+  }
+
+  ul {
+    list-style-type: none;
+    width: 100%;
+    height: 100%;
+    display: inline-flex;
+    justify-content: center;
+    flex-flow: row wrap;
+    li {
+      width: 200px;
+      height: 200px;
+      margin: 1em;
+      text-align: center;
+    }
   }
 
   input.form-control {
@@ -66,7 +82,7 @@ body {
 
   textarea.form-control {
     @extend input.form-control;
-    height:!important 100%;
+    height: !important 100%;
     min-height: 300px;
     &:focus {
       @extend textarea.form-control;
@@ -82,7 +98,7 @@ body {
     text-transform: uppercase;
     font-weight: 300;
   }
-  
+
   header {
     color: white;
     span {
@@ -92,7 +108,9 @@ body {
   .btn {
     @include btn;
   }
-  
+  .carousel {
+    width: 100%;
+    margin: 0;
+    position: relative;
+  }
 }
-
-
