--- a/client/src/sass/_container.scss
+++ b/client/src/sass/_container.scss
@@ -3,9 +3,8 @@
 
 .container-fluid {
   position: relative;
-  height: 100vh;
-  padding: 4em;
-
+  height: 100%;
+  padding: 0;
   .row {
     height: 100%;
     padding: 15px;
@@ -21,7 +20,9 @@
 
 .hero-container {
   background-color: $mainred;
-  background-image: url("../img/hero-img-dark.png");
+  padding: 4em;
+  height: 90vh;
+  background-image: url("../img/hero-img.jpg");
   @include backgroundimg;
 }
 
@@ -60,20 +61,17 @@
   .row-inner {
     display: flex;
     flex-flow: row wrap;
-    .col {
-      width: 45%;
-      min-width: 300px;
-      min-height: auto;
-      height: auto !important;
-      li {
-        list-style-type: none;
-        text-align: left;
+    text-align: left;
+      img {
+        margin-top: 2em;
+          width: 80px;
+          min-width: 80px;
+        }
+      p {
+        min-width: 100%;
+        padding-top: 15px;
         text-transform: capitalize;
-        font-size: 20px;
-        font-weight: 400;
-        padding: 15px;
       }
-    }
   }
   .btn {
     display: inline-block;
@@ -84,53 +82,52 @@
 
 .meet-the-team-container {
   background-color: black;
-  padding: 0;
   position: relative;
   width: 100%;
+  padding: 0;
   h2 {
     position: absolute;
     top: 25%;
     right: 20%;
     z-index: 1;
   }
-  .row {
-    display: inline-flex;
-    flex-flow: column wrap;
-    height: 100vh;
-    overflow: hidden;
-    width: 100vw;
+  .inner-col {
+    // border: 3px solid blue;
+    color: white;
     padding: 0;
-    border: 2px solid yellow;
-    .inner-col {
-      border: 3px solid blue;
-      padding: 2em;
-      color: white;
+    text-align: center;
+    float: left;
+    height: 100vh;
+    position: relative;
+    width: 100%;
+    h6 {
       text-align: center;
-      overflow: hidden;
       width: 100%;
-      height: 100%;
-      position: relative;
-      img {
-        width: 50%;
-        border: 1px solid red;
-        position: absolute;
-        top: 50%;
-        left: 75%;
-        transform: translate(-50%, -50%);
-        z-index: -1;
-      }
     }
-    .inner-col:nth-of-type(2) {
-      background-color: white;
-      height: 100vh;
-      color: black;
-      text-align: left;
+    h6:nth-of-type(1) {
+      margin-top: 7em;
+    }
+    img {
+      display: block;
+      margin: 0 auto;
+      // border: 1px solid blue;
+      max-height: 70%;
+      min-width: 300px;
       width: 100%;
-      p {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-      }
+      max-width: 700px !important;
+    }
+  }
+  .inner-col:nth-of-type(2) {
+    background-color: white;
+    height: 100vh;
+    padding: 2em;
+    color: black;
+    text-align: left;
+    p {
+      position: absolute;
+      top: 50%;
+      width: 70%;
+      transform: translateY(-50%);
     }
   }
 }
