--- a/client/src/sass/_footer.scss
+++ b/client/src/sass/_footer.scss
@@ -1,15 +1,21 @@
 .App {
 
     .footer {
-      height: 600px;
+      height: 300px;
       position: absolute;
       bottom: 0;
       background-color: black;
       .row {
-        height: auto !important;
+        height: 100% !important;
         text-align: center;
         min-width: 100%;
+        width: 300px;
+        display: inline-block;
+        margin: 0 auto;
+        padding: 3em;
         div {
+          min-width: 100%;
+          height: 40%;
           img {
             margin: 0.5em;
             width: 20px;
@@ -19,10 +25,6 @@
           h5 {
             text-align: left;
           }
-          text-align: left;
-          margin: 1em 4em;
-          width: 300px;
-          display: inline-block;
         }
       }
       .row:nth-of-type(2) {
