--- a/client/src/sass/App.scss
+++ b/client/src/sass/App.scss
@@ -36,7 +36,7 @@ body {
   }
 
   h2 {
-    font-size: 4vw;
+    font-size: 7vh;
     font-weight: bolder;
   }
   p {
@@ -45,21 +45,6 @@ body {
   img {
     width: 100%;
     min-width: 100%;
-  }
-
-  ul {
-    list-style-type: none;
-    width: 100%;
-    height: 100%;
-    display: inline-flex;
-    justify-content: center;
-    flex-flow: row wrap;
-    li {
-      width: 200px;
-      height: 200px;
-      margin: 1em;
-      text-align: center;
-    }
   }
 
   input.form-control {
