--- a/client/src/sass/_navbar.scss
+++ b/client/src/sass/_navbar.scss
@@ -1,14 +1,80 @@
+@import "./variables";
+@import "./mixins";
+@import "./abstract";
 nav {
-    position: absolute;
+    position: fixed;
     background-color: transparent;
     width: 100%;
     padding: 15px;
+    height: 80px;
+    z-index: 1;
     a {
-        color: white;
+        color: $icewhite;
+        @extend .centered-block;
     }
+  
+    .nav-item {
+        letter-spacing: 2px;
+        margin: 0 25px;
+        :hover, :active {
+            letter-spacing: 2px;
+            color: $icewhite;
+            text-decoration: none;
+        }
+        :after,
+        :before {
+        backface-visibility: hidden;
+        border: 1px solid rgba(#fff, 0);
+        bottom: 0px;
+        content: " ";
+        position: relative;
+        transition: all 280ms ease-in-out;
+        width: 0;
+        @extend .centered-block;
+        }
+        :hover:after,
+        :hover:before {
+        backface-visibility: hidden;
+        border-color: #fff;
+        transition: width 350ms ease-in-out;
+        width: 70%;
+        }
+
+        :hover:before {
+        bottom: auto;
+        top: 0;
+        width: 70%;
+        }
+    }
+}
+
+
+.nav-alt {
     .nav-item {
         float: right;
-        letter-spacing: 2px;
-        padding: 0 15px;
+    }
+    .contact-us {
+        border: 1px solid $icewhite;
+        text-align: center;
+
+    }
+}
+
+.nav-home {
+    @include flex;
+    text-align: center;
+    .navbar-nav, .navbar {
+        margin: 0 auto;
+        margin-left: 10.6%;
+    }
+    .navbar-brand {
+        margin: 0 auto;
+        padding: 25px;
+        .logo-img {
+            width: 56px;
+            }
+    }
+    .nav-item {
+        align-self: center;
     }
 }
