--- a/client/src/sass/_variables.scss
+++ b/client/src/sass/_variables.scss
@@ -1,2 +1,7 @@
 $mainred: #B82626;
-$yellow: #FCE129;
+$yellow: #D89E00;
+$darkblue: #070C29;
+$icewhite: #fff;
+$smokeyblack: #333;
+$paleblue: #E5E1ED;
+
