--- a/client/src/sass/_footer.scss
+++ b/client/src/sass/_footer.scss
@@ -1,4 +1,3 @@
-.App {
 
     .footer {
       height: 300px;
@@ -6,6 +5,7 @@
       bottom: 0;
       background-color: black;
       color: white;
+      z-index: 2;
       .row {
         height: 100% !important;
         text-align: center;
@@ -35,4 +35,15 @@
         }
       }
     }
-}
+
+    .pretend-footer {  
+      h4 {
+        @include header(1em);
+      }
+      .btn {
+        @extend .centered-block;
+        background-color: transparent;
+        color: $darkblue;
+        border: none;
+      }
+    }
