--- a/client/src/sass/_container.scss
+++ b/client/src/sass/_container.scss
@@ -2,16 +2,13 @@
 @import "./mixins";
 @import "./abstract";
 
-.container-fluid, .container {
-  @extend .container-spacing;
-  @include flex;
-  .row {
-    @extend .row-spacing;
-    @include flex;
-    .col {
-      height: 100%;
-    }
-  }
+
+.app-container {
+  min-height: 100%; /* will cover the 100% of viewport */
+  display: block;
+  position: relative;
+  padding: 80px 0 300px 0 !important;
+  background-color: rgba($color: $darkblue, $alpha: 0.03)
 }
 
 .hero-container {
@@ -53,6 +50,7 @@
     align-self: center;
     padding-top: 0 !important;
     .header {
+      position: relative;
       border: 4px solid $darkblue;
       text-align: left;
       margin-top: 20%;
@@ -65,164 +63,182 @@
       img  {
         position: absolute;
         right: 65%;
-        top: -90%;
+        top: -110%;
         max-width: 400px;     
       }
     }
     .body {
-      margin-top: 3%;
+      margin-top: 8%;
       padding-bottom: 0em !important;
     }   
   }
  
   .team-container {
-    h2 {
-      @include header;
-      text-align: center;
+
+    a:hover {
+      text-decoration: none;
+      color: $darkblue;
     }
 
+    .member-row {
+      margin-top: 7%;
+      flex-flow: row wrap !important;
+    }
   }
 
-  .member-row {
-    flex-flow: row wrap;
-  }
 
   .content-row {
-    flex-flow: column wrap;
+    margin-top: 7%;
+    flex-flow: row wrap !important;
 
     .col {
-      border: 1px solid red;
+      width: 25vw;
+      max-width: 300px;
+      margin: 1em;
     }
   }
 
-  .member-title-card {
-    display: inline-block;
-    max-width: 25vw;
+
+  .member-title-card  {
+    width: 25vw;
+    max-width: 300px;
     margin: 1em;
-    background: none;
-    background-color: transparent;
-    border: none;
-    &:hover {
-      transform: scale(1.1);
-    }
     .cardimage-container {
+      height: 300px;
       max-height: 25vw;
       overflow: hidden;
     }
+  
+  }
+
+  .individual-view {
+    color: $darkblue;
+    font-weight: lighter;
+    letter-spacing: 0.02rem;
+    flex-flow: row wrap !important;
+    align-items: flex-start;
+    .col {
+      min-width: 300px;
+    }
     .card-body {
-      .card-title {
-        @include header(2em);
-        font-style: normal;
-        font-weight: bolder;
-        padding-bottom: 0;
-      }
-      .card-subtitle {
-        @include header(1em, $yellow);
-      }
+      padding: 1.25rem 0;
+      h5, h6 {text-align: left !important;}
     }
-  }
 
-.services-container {
-  text-align: center;
-  text-transform: uppercase;
-  background-color: $yellow;
-  height: auto;
-  padding: 4em;
-  h3 {
-    color: black;
-  }
-  .row-inner {
-    display: flex;
-    flex-flow: row wrap;
-    ul {
-      list-style-type: none;
-      width: 100%;
-      height: 100%;
-      display: inline-flex;
-      justify-content: center;
-      flex-flow: row wrap;
-      padding-inline-start: 0px;
-      padding: 0 1em;
-      li {
-        max-width: 200px;
-        width: 40%;
-        height: 200px;
-        max-height: 200px;
-        margin: 0.5em 1em; 
-        text-align: center;
-      }
-    }
-    img {
-      margin-top: 2em;
-      width: 80px;
-      min-width: 80px;
-    }
-    p {
-      min-width: 100%;
-      padding-top: 15px;
-      text-transform: capitalize;
-    }
-  }
-  .btn {
-    display: inline-block;
-    margin: 0 auto;
-    @include btn(black, black);
-  }
-}
-
-.meet-the-team-container {
-  background-color: black;
-  position: relative;
-  width: 100%;
-  padding: 0;
-  .inner-col {
-    color: white;
-    padding: 0;
-    text-align: center;
-    float: left;
-    height: 100vh;
-    position: relative;
-    width: 100%;
-    h2 {
-      margin-top: 3em;
-    }
     h6 {
-      text-align: center;
-      padding: 1em;
-      width: 100%;
+      text-transform: uppercase;
     }
-    h6:nth-of-type(1) {
-      margin-top: 2em;
-    }
-    img {
-      display: block;
-      margin: 0 auto;
-      width: auto;
-      height: 500px !important;
-      max-height: 500px;
 
+    button {
+      @extend .border-color-reset;
+      color: $darkblue;
+      margin-top: 10%;
+      padding: 0.375rem 0;
+      text-transform: uppercase;
     }
   }
-  .inner-col:nth-of-type(1) {
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    justify-content: center;
-  }
-  .inner-col:nth-of-type(2) {
-    background-color: white;
-    height: 100vh;
-    padding: 2em;
-    color: black;
-    text-align: left;
-    p {
-      position: absolute;
-      top: 50%;
-      width: 70%;
-      transform: translateY(-50%);
-    }
-  }
-}
+
+// .services-container {
+//   text-align: center;
+//   text-transform: uppercase;
+//   background-color: $yellow;
+//   height: auto;
+//   padding: 4em;
+//   h3 {
+//     color: black;
+//   }
+//   .row-inner {
+//     display: flex;
+//     flex-flow: row wrap;
+//     ul {
+//       list-style-type: none;
+//       width: 100%;
+//       height: 100%;
+//       display: inline-flex;
+//       justify-content: center;
+//       flex-flow: row wrap;
+//       padding-inline-start: 0px;
+//       padding: 0 1em;
+//       li {
+//         max-width: 200px;
+//         width: 40%;
+//         height: 200px;
+//         max-height: 200px;
+//         margin: 0.5em 1em; 
+//         text-align: center;
+//       }
+//     }
+//     img {
+//       margin-top: 2em;
+//       width: 80px;
+//       min-width: 80px;
+//     }
+//     p {
+//       min-width: 100%;
+//       padding-top: 15px;
+//       text-transform: capitalize;
+//     }
+//   }
+//   .btn {
+//     display: inline-block;
+//     margin: 0 auto;
+//     @include btn(black, black);
+//   }
+// }
+
+// .meet-the-team-container {
+//   background-color: black;
+//   position: relative;
+//   width: 100%;
+//   padding: 0;
+//   .inner-col {
+//     color: white;
+//     padding: 0;
+//     text-align: center;
+//     float: left;
+//     height: 100vh;
+//     position: relative;
+//     width: 100%;
+//     h2 {
+//       margin-top: 3em;
+//     }
+//     h6 {
+//       text-align: center;
+//       padding: 1em;
+//       width: 100%;
+//     }
+//     h6:nth-of-type(1) {
+//       margin-top: 2em;
+//     }
+//     img {
+//       display: block;
+//       margin: 0 auto;
+//       width: auto;
+//       height: 500px !important;
+//       max-height: 500px;
+
+//     }
+//   }
+//   .inner-col:nth-of-type(1) {
+//     display: flex;
+//     flex-flow: column nowrap;
+//     align-items: center;
+//     justify-content: center;
+//   }
+//   .inner-col:nth-of-type(2) {
+//     background-color: white;
+//     height: 100vh;
+//     padding: 2em;
+//     color: black;
+//     text-align: left;
+//     p {
+//       position: absolute;
+//       top: 50%;
+//       width: 70%;
+//       transform: translateY(-50%);
+//     }
+//   }
+// }
 
 
 .open-table-top {
