--- a/client/src/sass/_variables.scss
+++ b/client/src/sass/_variables.scss
@@ -4,4 +4,10 @@ $darkblue: #070C29;
 $icewhite: #fff;
 $smokeyblack: #333;
 $paleblue: #E5E1ED;
+$charcoal: #161519;
+$nightblack: #0B0B0B;
 
+$body-fontsize: 1em;
+
+$path--image: "../img/";
+$hero-image: 'hero-img.png';
