--- a/client/src/sass/_navbar.scss
+++ b/client/src/sass/_navbar.scss
@@ -3,16 +3,27 @@
 @import "./abstract";
 nav {
     position: fixed;
-    background-color: transparent;
+    background-color: $darkblue;
     width: 100%;
-    padding: 15px;
+    padding: 1em;
     height: 80px;
     z-index: 1;
+    @include font-component($size: 10px, $transform: uppercase);
     a {
         color: $icewhite;
         @extend .centered-block;
     }
-  
+    button {
+        color: $icewhite;
+        border-color: $icewhite;
+    }
+    .navbar {
+        padding: 0;
+    }
+    .navbar-expand-md .navbar-collapse {
+        background-color: $darkblue;
+        justify-content: flex-end;
+    }
     .nav-item {
         letter-spacing: 2px;
         margin: 0 25px;
@@ -50,19 +61,46 @@ nav {
     }
 }
 
-
-.nav-alt {
-    .nav-item {
-        float: right;
+.nav__contact {
+    padding: 0 1em;
+    border: 1px solid $icewhite;
+    overflow: hidden;
+    position: relative;
+    
+    a {
+      z-index: 20;
     }
-    .contact-us {
-        border: 1px solid $icewhite;
-        text-align: center;
-
+    
+    &:after {
+      background: #fff;
+      content: "";
+      height: 155px;
+      left: -75px;
+      opacity: .2;
+      position: absolute;
+      top: -50px;
+      transform: rotate(35deg);
+      transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+      width: 50px;
+      z-index: -10;
     }
+  }
+  
+  .nav__contact:hover {
+    
+    &:after {
+      left: 120%;
+      transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+    }
+  }
+
+
+.nav-norm {
+
 }
 
-.nav-home {
+.nav-alt {
+    background-color: transparent;
     @include flex;
     @include font-component($transform: uppercase);
     .navbar-nav, .navbar {
