--- a/client/src/sass/_abstract.scss
+++ b/client/src/sass/_abstract.scss
@@ -12,11 +12,8 @@ h2 {
 }
 
 .top-title-text {
-    text-transform: uppercase;
-    text-align: center;
+    @include font-component($charcoal, 2rem, center, uppercase);
     font-weight: lighter;
-    font-size: 2vw;
-    color: $smokeyblack;   
     padding: 1em;
 }
 
@@ -25,8 +22,8 @@ h2 {
 }
 
 .border-color-reset {
-    background: none;
-    border: none;
+    background: none !important;
+    border: none !important;
 }
 
 
