--- a/client/src/sass/_container.scss
+++ b/client/src/sass/_container.scss
@@ -21,7 +21,8 @@
     @extend .centered-block;
     background: none;
     border: none;
-    width: 20vw;
+    width: 80vw;
+    max-width: 300px;
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -31,47 +32,56 @@
     @extend .top-title-text;
     border: 3px solid black;
     background-color: $icewhite;
+    width: 90vw;
     max-width: 500px;
-    emphasis {
+    strong {
         font-weight: 900;
       }
     .subtitle {
-      font-size: 1vw;
+      font-size: 1rem;
     }
   }
 
 }
 
 .about-container {
-  @include flex;
+  @include flex();
+  align-items: center;
   }
 
   .statement-container {
-    max-width: 100%;
-    height: 100% !important;
-    align-self: center;
-    padding-top: 0 !important;
+    width: 80vw;
+    max-width: 1200px;
+    @include flex();
+    padding: 5% 5%;
     .header {
+      padding: 5%;
       position: relative;
       border: 4px solid $darkblue;
       text-align: left;
       margin-top: 20%;
-      height: 200px !important;
       h2 {
-        @include header(3em);
+        @include header(3rem);
         margin-left: 35%;
+        margin-top: -2%;
         text-align: left;
+        @media screen and (max-width: 600px) {
+            font-size: 30px;
+            text-align: center;
+            margin: 0 auto;
+        }
+        
       }
       img  {
         position: absolute;
         right: 65%;
-        top: -110%;
+        top: -100%;
         max-width: 400px;     
       }
     }
     .body {
       margin-top: 8%;
-      padding-bottom: 0em !important;
+      padding: 1rem;
     }   
   }
  
@@ -82,31 +92,23 @@
       color: $darkblue;
     }
 
-    .member-row {
-      margin-top: 7%;
-      flex-flow: row wrap !important;
-    }
+
   }
 
 
-  .content-row {
-    margin-top: 7%;
-    flex-flow: row wrap !important;
-
-    .col {
-      width: 25vw;
-      max-width: 300px;
-      margin: 1em;
-    }
+  .member-row {
+    padding: 10% 0;
+    @include flex($direction: row, $wrap: wrap !important);
   }
+
 
 
   .member-title-card  {
     width: 25vw;
     max-width: 300px;
-    margin: 1em;
     .cardimage-container {
-      height: 300px;
+      height: 300px !important;
+      min-height: 300px;
       max-height: 25vw;
       overflow: hidden;
     }
@@ -117,10 +119,10 @@
     color: $darkblue;
     font-weight: lighter;
     letter-spacing: 0.02rem;
-    flex-flow: row wrap !important;
-    align-items: flex-start;
     .col {
-      min-width: 300px;
+      width: 25vw;
+      max-width: 300px;
+      min-width: 300px !important;
     }
     .card-body {
       padding: 1.25rem 0;
@@ -128,6 +130,7 @@
     }
 
     h6 {
+      font-weight: bolder;
       text-transform: uppercase;
     }
 
