added web-safe font

--- a/client/src/sass/_variables.scss
+++ b/client/src/sass/_variables.scss
@@ -8,6 +8,7 @@ $charcoal: #161519;
 $nightblack: #0B0B0B;
 
 $body-fontsize: 1em;
+$font-stack: "Roboto", Arial, Helvetica, sans-serif;
 
 $path--image: "../img/";
 $hero-image: 'hero-img.png';
