--- a/client/src/sass/_container.scss
+++ b/client/src/sass/_container.scss
@@ -49,7 +49,6 @@
 
   .statement-container {
     width: 80vw;
-    max-width: 1200px;
     @include flex();
     padding: 3% 5%;
     .header {
@@ -75,9 +74,9 @@
       }
       img  {
         position: absolute;
+        width: 30vw;
         right: 65%;
-        top: -100%;
-        max-width: 400px;     
+        top: -90%;
       }
     }
     .body {
@@ -99,8 +98,9 @@
 
   .member-row {
     padding: 10% 0;
-    padding-top: 15%;
+    padding-top: 10%;
     margin: 0 auto;
+    width: 80vw;
     @include flex($direction: row, $wrap: wrap);
     @media screen and (max-width: 768px) {
       @include flex($direction: column, $horizontal-pos: center);
@@ -111,33 +111,22 @@
 
 
   .member-title-card  {
-    width: 25vw;
-    max-width: 300px;
+    padding: 1em;
     .cardimage-container {
-      height: 300px !important;
-      min-height: 300px;
-      max-height: 25vw;
+      width: 100%;
+      height: calc(250px + 15vmin);
+      @include flex();
       overflow: hidden;
     }
+        @media screen and (max-width: 425px) {
+      }
   
   }
 
   .individual-view {
     color: $darkblue;
-    font-weight: lighter;
     letter-spacing: 0.02rem;
-    .inner_col {
-      padding: 1em;
-      margin: 0 auto;
-      width: 25vw;
-      max-width: 300px;
-      min-width: 300px !important;
-    }
-    .inner_col:nth-of-type(1){
-      @media screen and (max-width: 600px) {
-        margin-top: 20%;
-     }
-    }
+    width: 80vw;
     .card-body {
       padding: 1.25rem 0;
       h5, h6 {text-align: left !important;}
@@ -155,6 +144,21 @@
       padding: 0.375rem 0;
       text-transform: uppercase;
     }
+  }
+
+  .inner_col {
+    padding: 1em;
+    width: calc(250px + 15vmax);
+    @include flex($horizontal-pos: none);
+    @media screen and (max-width: 768px) {
+     align-self: center;
+  }
+  
+  }
+  .inner_col:nth-of-type(1){
+    @media screen and (max-width: 600px) {
+      margin-top: 20%;
+   }
   }
 
   .main-services-container {
@@ -216,109 +220,6 @@
       width: 30%;
     }
   }
-
-// .services-container {
-//   text-align: center;
-//   text-transform: uppercase;
-//   background-color: $yellow;
-//   height: auto;
-//   padding: 4em;
-//   h3 {
-//     color: black;
-//   }
-//   .row-inner {
-//     display: flex;
-//     flex-flow: row wrap;
-//     ul {
-//       list-style-type: none;
-//       width: 100%;
-//       height: 100%;
-//       display: inline-flex;
-//       justify-content: center;
-//       flex-flow: row wrap;
-//       padding-inline-start: 0px;
-//       padding: 0 1em;
-//       li {
-//         max-width: 200px;
-//         width: 40%;
-//         height: 200px;
-//         max-height: 200px;
-//         margin: 0.5em 1em; 
-//         text-align: center;
-//       }
-//     }
-//     img {
-//       margin-top: 2em;
-//       width: 80px;
-//       min-width: 80px;
-//     }
-//     p {
-//       min-width: 100%;
-//       padding-top: 15px;
-//       text-transform: capitalize;
-//     }
-//   }
-//   .btn {
-//     display: inline-block;
-//     margin: 0 auto;
-//     @include btn(black, black);
-//   }
-// }
-
-// .meet-the-team-container {
-//   background-color: black;
-//   position: relative;
-//   width: 100%;
-//   padding: 0;
-//   .inner-col {
-//     color: white;
-//     padding: 0;
-//     text-align: center;
-//     float: left;
-//     height: 100vh;
-//     position: relative;
-//     width: 100%;
-//     h2 {
-//       margin-top: 3em;
-//     }
-//     h6 {
-//       text-align: center;
-//       padding: 1em;
-//       width: 100%;
-//     }
-//     h6:nth-of-type(1) {
-//       margin-top: 2em;
-//     }
-//     img {
-//       display: block;
-//       margin: 0 auto;
-//       width: auto;
-//       height: 500px !important;
-//       max-height: 500px;
-
-//     }
-//   }
-//   .inner-col:nth-of-type(1) {
-//     display: flex;
-//     flex-flow: column nowrap;
-//     align-items: center;
-//     justify-content: center;
-//   }
-//   .inner-col:nth-of-type(2) {
-//     background-color: white;
-//     height: 100vh;
-//     padding: 2em;
-//     color: black;
-//     text-align: left;
-//     p {
-//       position: absolute;
-//       top: 50%;
-//       width: 70%;
-//       transform: translateY(-50%);
-//     }
-//   }
-// }
-
 
 .open-table-top {
   transition: transform 500ms ease 0ms;
