--- a/client/src/sass/_footer.scss
+++ b/client/src/sass/_footer.scss
@@ -9,6 +9,11 @@
       background-color: $charcoal;
       text-align: center;
     }
+    
+   .footer__brand__img {
+     width: 15%;
+     margin: 1em;
+   }
 
     .footer__navigation {
       @include flex();
