--- a/client/src/sass/_variables.scss
+++ b/client/src/sass/_variables.scss
@@ -9,6 +9,7 @@ $nightblack: #0B0B0B;
 
 $body-fontsize: calc(0.55em + 1vmin);
 $subheading: calc(0.75em + 1vmax);
+$heading: calc(1em + 1vmax);
 
 $font-stack: "Roboto", Arial, Helvetica, sans-serif;
 
