--- a/client/src/sass/_container.scss
+++ b/client/src/sass/_container.scss
@@ -114,7 +114,7 @@
     padding: 1em;
     .cardimage-container {
       width: 100%;
-      height: calc(250px + 15vmin);
+      height: calc(250px + 9vmin);
       @include flex();
       overflow: hidden;
     }
@@ -148,7 +148,7 @@
 
   .inner_col {
     padding: 1em;
-    width: calc(250px + 15vmax);
+    width: calc(250px + 9vmax);
     @include flex($horizontal-pos: none);
     @media screen and (max-width: 768px) {
      align-self: center;
@@ -161,46 +161,71 @@
    }
   }
 
+  .services-container {
+    @include flex();
+    align-items: center;
+  }
+
   .main-services-container {
-    margin-top: 5%;
-    .row {
+    padding-top: 10%;
+    width: 90vw;
+    .inner__row {
+      @include flex();
       position: relative;
     }
-    .title-card {
+    .row__card {
       padding: 8em 2em;
       background: $darkblue !important;
       color: $icewhite;
-      width: 35%;
+      width: 35vw;
+      min-width: 300px;
+      @media screen and (max-width: 768px) {
+        margin-top: 20%;
+        width: 90vw;
+     }
       h1 {
         @include header(2em, $icewhite);
         text-align: left;
         font-weight: bolder;
       }
+      @media screen and (max-width: 768px) {
+        margin-top: 20%;
+        width: 90vw;
+     }
     }
-    img {
+
+    .services-img {
       position: absolute;
       z-index: -1;
-      height: 75%;
-      left: 30%;
+      height: 80%;
+      width: auto;
+      top: 10%;
+      left: 35%;
     }
   }
 
   .add-services-container {
-    flex-flow:row wrap !important;
+    @include flex($direction: row, $wrap: nowrap);
+    width: 90vw;
+    padding-bottom: 15vh;
     .service-card {
-      width: 70%;
-      .card-body .row {
+      width: 100%;
+      background-color: $darkblue;
+            
+     .inner__row {
         margin-top: 5%;
         align-items: flex-start;
-        flex-flow:row wrap !important;
+        @include flex($direction: row, $wrap: wrap);
+        @media screen and (max-width: 768px) {
+          @include flex();
+          border: 1px solid pink;
+       }
       }
       h1 {
-        @include header(2em, $icewhite);
-        text-align: left;
-        text-transform: uppercase;
+        @include font-component($color: $icewhite, $size: $heading, $alignment: left, $transform: uppercase);
         font-weight: bolder;
       }
-      subtitle {
+      .subtitle {
         font-style: italic;
       }
       ul,li {
@@ -208,16 +233,18 @@
         list-style: none;
         padding-left: 0;      
       }
-      .col {
+      .inner__col {
         width: 33%;
-        min-width: 200px;
-        max-width: 250px;
-
+        min-width: 300px;
+        padding: 0 2em 4em 1em;
       }
 
     }
-    .row:nth-child(2) {
+    .inner__row:nth-child(2) {
       width: 30%;
+      img {
+        height: 100%;
+      }
     }
   }
 
